--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -70,3 +70,13 @@ body{
 .ulnav2>li{
     margin: 0 1rem;
 }
+.sizeicons{
+    font-size: .7rem;
+    display: flex;
+    margin: 0px 10px;
+    align-items: center;
+    
+}
+.sdimg{
+    filter: opacity(25%);
+}
