--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -56,6 +56,7 @@ p,ul,li,a{
     src: url(../font/Poppins-Thin.ttf);
 }
 body{
+    overflow-x: hidden;
     font-family: poppinsBold;
 }
 .parent{
@@ -79,4 +80,100 @@ body{
 }
 .sdimg{
     filter: opacity(25%);
+}
+.imgabs{
+    right: 6%;
+    top: 0;
+    object-fit: cover;
+    z-index: 90;
+    height: 100%;
+}
+.figabs{
+    left: 10%;
+    top: 50%;
+    width: 30%;
+    transform: translate(0% , -50%);
+}
+.figabs>h4{
+    color: rgb(193, 40, 42);
+}
+.figabs>h2{
+    padding: 1rem 0rem;
+}
+.figabs>p{
+    padding-bottom: 1rem;
+    font-size: .8rem;
+    font-family:poppinsRegular ;
+}
+.figabs>div{
+    padding-top: 2rem;
+}
+.figabs>div>a{
+    box-shadow: 5px 6px 150px  black;
+    padding: 1.2rem;
+    border-radius: 4px;
+    font-family:poppinsBold ;
+    font-size: .9rem;
+    background-color: #c1282a;
+    color: white;
+    transition: .4s ease-in-out;
+}
+.figabs>div>a:hover{
+    background-color: transparent;
+    color: #c1282a;
+    box-shadow: 2px 3px 50px  black;
+}
+.nimradius{
+    display: flex;
+    width: 300px;
+    height: 300px;
+    background-color: #c1282a;
+    position: absolute;
+    right: 7%;
+    top: 20%;
+    border-radius: 60% 40% 30% 40%;
+    animation: radius2 15s linear infinite;
+    z-index: 50;
+    transform: translate(0px , 0px);
+}
+@keyframes radius2 {
+    0%{
+        border-radius: 60% 40% 30% 40%;
+        transform: translate(0px , 0px);
+        }
+        15%{
+            border-radius: 50% 70% 65% 70%;
+            transform: translate(60px , 0px);
+        }
+        30%{
+            border-radius: 70% 40% 45% 50%;
+            transform: translate(120px , 0px);
+        }
+        45%{
+            border-radius: 50% 70% 100% 85%;
+            transform: translate(60px , 0px);
+        }
+        55%{
+            border-radius: 80% 45% 50% 65%;
+            transform: translate(0px , 0px);
+
+        }
+        65%{
+            border-radius: 40% 85% 80% 70%;
+            transform: translate(-60px , 0px);
+        }
+        75%{
+            border-radius: 80% 60% 60% 45%;
+            transform: translate(-120px , 0px);
+        }
+        90%{
+            border-radius:35% 100% 90% 80%  ;
+            transform: translate(-60px , 0px);
+
+        }
+        100%{
+            border-radius: 60% 40% 30% 40%;
+            transform: translate(0px , 0px);
+        }
+    
 }
