--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,10 +87,25 @@ body {
   align-items: center;
 }
 
-.sdimg {
+.sdimg::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  display: block;
+  opacity: 20%;
   background-image: url("../img/memphis-1.jpg");
-  filter: opacity(100%);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.sdimg {
   height: 100vh;
+  position: relative;
+}
+
+.transformstel {
+  transform: translate(10%, 0%);
 }
 
 .imgabs {
@@ -106,7 +121,6 @@ body {
   left: 10%;
   top: 50%;
   width: 30%;
-  transform: translate(0%, -50%);
 }
 
 .figabs > h4 {
@@ -128,7 +142,7 @@ body {
 }
 
 .figabs > div > a {
-  box-shadow: 5px 6px 150px black;
+  box-shadow: 5px 6px 150px rgba(0, 0, 0, 0.494);
   padding: 1.2rem;
   border-radius: 4px;
   font-family: poppinsBold;
@@ -141,7 +155,13 @@ body {
 .figabs > div > a:hover {
   background-color: transparent;
   color: #c1282a;
-  box-shadow: 2px 3px 50px black;
+  box-shadow: 2px 3px 50px rgba(0, 0, 0, 0.494);
+}
+
+.dstar {
+  background-color: black;
+  left: 20%;
+  top: 0;
 }
 
 .nimradius {
@@ -151,10 +171,10 @@ body {
   background-color: #c1282a;
   position: absolute;
   right: 7%;
-  top: 20%;
+  top: 10%;
   border-radius: 60% 40% 30% 40%;
   animation: radius2 15s linear infinite;
-  z-index: 50;
+  z-index: 0;
   transform: translate(0px, 0px);
 }
 
@@ -194,5 +214,39 @@ body {
   100% {
     border-radius: 60% 40% 30% 40%;
     transform: translate(0px, 0px);
+  }
+}
+.preserve3d {
+  transform-style: preserve-3d;
+}
+
+.nimBorder {
+  display: flex;
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  border: 5px solid #c1282a;
+  top: 10%;
+  left: 30%;
+  border-radius: 50%;
+  transform: perspective(800px) scale3d(1, 1.2, 0.4) translate(200px, 0px);
+  animation: nimBorders 10s linear infinite;
+}
+
+@keyframes nimBorders {
+  0% {
+    transform: perspective(800px) scale3d(1, 1.2, 0.4) translate(100px, 100px);
+  }
+  25% {
+    transform: perspective(800px) scale3d(1.5, 0.9, 1.2) translate(0px, 0px);
+  }
+  50% {
+    transform: perspective(800px) scale3d(1, 1.2, 0.2) translate(-100px, 0px);
+  }
+  75% {
+    transform: perspective(800px) scale3d(1.7, 0.9, 0.4) translate(0px, 0px);
+  }
+  100% {
+    transform: perspective(800px) scale3d(1, 1.2, 0.4) translate(100px, 100px);
   }
 }/*# sourceMappingURL=style.css.map */
