--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,6 @@
-*, *::after, *::before {
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -20,7 +22,10 @@ a {
   margin: 0;
 }
 
-p, ul, li, a {
+p,
+ul,
+li,
+a {
   padding: 0;
   margin: 0;
 }
@@ -142,7 +147,6 @@ body {
 }
 
 .figabs > div > a {
-  box-shadow: 5px 6px 150px rgba(0, 0, 0, 0.494);
   padding: 1.2rem;
   border-radius: 4px;
   font-family: poppinsBold;
@@ -220,6 +224,54 @@ body {
   transform-style: preserve-3d;
 }
 
+.next2 {
+  right: -6%;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.345);
+  padding: 2rem;
+  width: 70px !important;
+  height: 70px !important;
+  transition: 0.4s ease-in-out;
+}
+
+.next2:hover {
+  background-color: rgba(0, 0, 0, 0.237);
+}
+
+.next2:active {
+  background-color: rgba(0, 0, 0, 0.345);
+}
+
+.next2::after {
+  display: flex;
+  align-items: center;
+  font-size: 30px;
+}
+
+.prev2 {
+  left: -6%;
+  color: white;
+  width: 70px !important;
+  height: 70px !important;
+  background-color: rgba(0, 0, 0, 0.345);
+  padding: 2rem;
+  transition: 0.4s ease-in-out;
+}
+
+.prev2::after {
+  display: flex;
+  align-items: center;
+  font-size: 30px;
+}
+
+.prev2:hover {
+  background-color: rgba(0, 0, 0, 0.237);
+}
+
+.prev2:active {
+  background-color: rgba(0, 0, 0, 0.345);
+}
+
 .nimBorder {
   display: flex;
   position: absolute;
@@ -249,4 +301,168 @@ body {
   100% {
     transform: perspective(800px) scale3d(1, 1.2, 0.4) translate(100px, 100px);
   }
+}
+.w-30 {
+  width: 30%;
+}
+
+.ahrefs {
+  color: #c1282a;
+  text-decoration: underline;
+}
+
+.parags {
+  font-size: 13px;
+  padding: 1rem 0rem;
+  font-family: poppinsRegular;
+}
+
+.topstars {
+  top: -50px;
+}
+
+.z-454 {
+  z-index: 999;
+}
+
+.redback {
+  position: absolute;
+  width: 100%;
+  height: 5px;
+  display: flex;
+  left: 0;
+  top: 0;
+  background-color: #c1282a;
+}
+
+.divredback::after {
+  width: 100%;
+  height: 3px;
+  background-image: linear-gradient(to right);
+}
+
+.spansop {
+  font-family: poppinsRegular;
+}
+
+.stopsa {
+  top: -70px;
+  line-height: 1.87rem;
+}
+
+.spansop > span {
+  line-height: 1.87rem;
+}
+
+.spansop > p {
+  line-height: 1.9rem;
+}
+
+.divredback {
+  background-color: white;
+}
+
+.iconsli > i {
+  color: #c1282a;
+  transition: 0.4s ease-in-out;
+}
+
+.iconsli:hover > i {
+  color: black;
+}
+
+.spansicons {
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border: 1px solid white;
+  padding: 1rem;
+}
+
+.spansicons > i {
+  color: #c1282a;
+  font-size: 2.5rem;
+  position: relative;
+  z-index: 80;
+}
+
+.spansicons::after {
+  content: "";
+  top: 0;
+  left: 0;
+  scale: 0.5;
+  position: absolute;
+  display: flex;
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  animation: shadowboxing 4s ease-in-out infinite;
+}
+
+.spanw1 {
+  width: 60px;
+  height: 2px;
+  background-color: #c1282a;
+  display: flex;
+}
+
+.spanw2 {
+  width: 30px;
+  height: 2px;
+  background-color: black;
+  display: flex;
+}
+
+.spanw3 {
+  width: 5px;
+  height: 2px;
+  background-color: black;
+}
+
+.ultype {
+  align-items: center;
+  list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+}
+
+.Learnhref {
+  padding: 0.8rem 1.6rem;
+  border-radius: 7px;
+  background-color: #c1282a;
+  color: white;
+  transition: 0.4s ease-in-out;
+}
+
+.Learnhref:hover {
+  background-color: white;
+  color: #c1282a;
+  box-shadow: 2px 10px 50px rgba(0, 0, 0, 0.494);
+}
+
+.h4p > p {
+  font-family: poppinsRegular;
+}
+
+.h4p > h4 {
+  font-size: 1.2rem;
+}
+
+@keyframes shadowboxing {
+  from {
+    background-color: white;
+    scale: 0.5;
+  }
+  to {
+    background-color: transparent;
+    scale: 1.5;
+  }
+}
+.spansicons > i::before {
+  background-color: white;
+  width: 80px;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }/*# sourceMappingURL=style.css.map */
