--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,153 +1,191 @@
-*,*::after,*::before{
-margin: 0;padding: 0;box-sizing: border-box;
+*,
+*::after,
+*::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 
 }
-a{
+
+a {
     color: black;
     text-decoration: none;
 }
-.sds{
+
+.sds {
     color: red;
-    background-color:  black;
+    background-color: black;
 }
-.ulnav{
+
+.ulnav {
     list-style-type: none;
-    padding: 2rem  0rem;
+    padding: 2rem 0rem;
     margin: 0;
 }
-p,ul,li,a{
-    padding: 0 ;
-    margin:0 ;
+
+p,
+ul,
+li,
+a {
+    padding: 0;
+    margin: 0;
 }
+
 @font-face {
     font-family: poppinsBlack;
     src: url(../font/Poppins-Black.ttf);
 }
+
 @font-face {
     font-family: poppinsBold;
     src: url(../font/Poppins-Bold.ttf);
 }
+
 @font-face {
     font-family: poppinsEBold;
     src: url(../font/Poppins-ExtraBold.ttf);
 }
+
 @font-face {
-    font-family:poppinsELight ;
+    font-family: poppinsELight;
     src: url(../font/Poppins-ExtraLight.ttf);
 }
+
 @font-face {
     font-family: poppinsLight;
     src: url(../font/Poppins-Light.ttf);
 }
+
 @font-face {
     font-family: poppinsMedium;
     src: url(../font/Poppins-Medium.ttf);
 }
+
 @font-face {
     font-family: poppinsRegular;
     src: url(../font/Poppins-Regular.ttf);
 }
+
 @font-face {
     font-family: poppinsSBold;
     src: url(../font/Poppins-SemiBold.ttf);
 }
+
 @font-face {
     font-family: poppinsThin;
     src: url(../font/Poppins-Thin.ttf);
 }
-body{
+
+body {
     overflow-x: hidden;
     font-family: poppinsBold;
 }
-.parent{
+
+.parent {
     width: 100%;
     background-color: #c1282a;
     padding: 1.5rem 0rem;
 
 }
-.ulnav2{
+
+.ulnav2 {
     list-style-type: none;
 }
-.ulnav2>li{
+
+.ulnav2>li {
     margin: 0 1rem;
 }
-.sizeicons{
+
+.sizeicons {
     font-size: .7rem;
     display: flex;
     margin: 0px 10px;
     align-items: center;
-    
+
 }
+
 .sdimg::before {
     content: '';
     width: 100%;
     height: 100%;
     position: absolute;
-    
+
     display: block;
     opacity: 20%;
     background-image: url('../img/memphis-1.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    
+
 
 }
-.sdimg{
+
+.sdimg {
     height: 100vh;
     position: relative;
 
 }
-.transformstel{
-    transform: translate(10% , 0%);
+
+.transformstel {
+    transform: translate(10%, 0%);
 }
-.imgabs{
+
+.imgabs {
     right: 6%;
     top: 0;
     object-fit: cover;
     z-index: 90;
     height: 100%;
 }
-.figabs{
+
+.figabs {
     left: 10%;
     top: 50%;
     width: 30%;
-    
+
 }
-.figabs>h4{
+
+.figabs>h4 {
     color: rgb(193, 40, 42);
 }
-.figabs>h2{
+
+.figabs>h2 {
     padding: 1rem 0rem;
 }
-.figabs>p{
+
+.figabs>p {
     padding-bottom: 1rem;
     font-size: .8rem;
-    font-family:poppinsRegular ;
+    font-family: poppinsRegular;
 }
-.figabs>div{
+
+.figabs>div {
     padding-top: 2rem;
 }
-.figabs>div>a{
-    box-shadow: 5px 6px 150px  rgba(0, 0, 0, 0.494);
+
+.figabs>div>a {
+
     padding: 1.2rem;
     border-radius: 4px;
-    font-family:poppinsBold ;
+    font-family: poppinsBold;
     font-size: .9rem;
     background-color: #c1282a;
     color: white;
     transition: .4s ease-in-out;
 }
-.figabs>div>a:hover{
+
+.figabs>div>a:hover {
     background-color: transparent;
     color: #c1282a;
-    box-shadow: 2px 3px 50px  rgba(0, 0, 0, 0.494);
+    box-shadow: 2px 3px 50px rgba(0, 0, 0, 0.494);
 }
-.dstar{
+
+.dstar {
     background-color: black;
     left: 20%;
     top: 0;
 }
-.nimradius{
+
+.nimradius {
     display: flex;
     width: 300px;
     height: 300px;
@@ -158,79 +196,322 @@ body{
     border-radius: 60% 40% 30% 40%;
     animation: radius2 15s linear infinite;
     z-index: 0;
-    transform: translate(0px , 0px);
+    transform: translate(0px, 0px);
 }
+
 @keyframes radius2 {
-    0%{
+    0% {
         border-radius: 60% 40% 30% 40%;
-        transform: translate(0px , 0px);
-        }
-        15%{
-            border-radius: 50% 70% 65% 70%;
-            transform: translate(60px , 0px);
-        }
-        30%{
-            border-radius: 70% 40% 45% 50%;
-            transform: translate(120px , 0px);
-        }
-        45%{
-            border-radius: 50% 70% 100% 85%;
-            transform: translate(60px , 0px);
-        }
-        55%{
-            border-radius: 80% 45% 50% 65%;
-            transform: translate(0px , 0px);
+        transform: translate(0px, 0px);
+    }
 
-        }
-        65%{
-            border-radius: 40% 85% 80% 70%;
-            transform: translate(-60px , 0px);
-        }
-        75%{
-            border-radius: 80% 60% 60% 45%;
-            transform: translate(-120px , 0px);
-        }
-        90%{
-            border-radius:35% 100% 90% 80%  ;
-            transform: translate(-60px , 0px);
+    15% {
+        border-radius: 50% 70% 65% 70%;
+        transform: translate(60px, 0px);
+    }
 
-        }
-        100%{
-            border-radius: 60% 40% 30% 40%;
-            transform: translate(0px , 0px);
-        }
-    
+    30% {
+        border-radius: 70% 40% 45% 50%;
+        transform: translate(120px, 0px);
+    }
+
+    45% {
+        border-radius: 50% 70% 100% 85%;
+        transform: translate(60px, 0px);
+    }
+
+    55% {
+        border-radius: 80% 45% 50% 65%;
+        transform: translate(0px, 0px);
+
+    }
+
+    65% {
+        border-radius: 40% 85% 80% 70%;
+        transform: translate(-60px, 0px);
+    }
+
+    75% {
+        border-radius: 80% 60% 60% 45%;
+        transform: translate(-120px, 0px);
+    }
+
+    90% {
+        border-radius: 35% 100% 90% 80%;
+        transform: translate(-60px, 0px);
+
+    }
+
+    100% {
+        border-radius: 60% 40% 30% 40%;
+        transform: translate(0px, 0px);
+    }
+
 }
-.preserve3d{
+
+.preserve3d {
     transform-style: preserve-3d;
 }
-.nimBorder{
+
+.next2 {
+    right: -6%;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.345);
+    padding: 2rem;
+    width: 70px !important;
+    height: 70px !important;
+    transition: .4s ease-in-out;
+}
+
+.next2:hover {
+    background-color: rgba(0, 0, 0, 0.237);
+
+}
+
+.next2:active {
+    background-color: rgba(0, 0, 0, .345);
+}
+
+.next2::after {
+    display: flex;
+    align-items: center;
+
+    font-size: 30px;
+}
+
+.prev2 {
+    left: -6%;
+    color: white;
+    width: 70px !important;
+    height: 70px !important;
+    background-color: rgba(0, 0, 0, 0.345);
+    padding: 2rem;
+    transition: .4s ease-in-out;
+}
+
+.prev2::after {
+    display: flex;
+    align-items: center;
+
+    font-size: 30px;
+
+}
+
+.prev2:hover {
+    background-color: rgba(0, 0, 0, 0.237);
+
+}
+
+.prev2:active {
+    background-color: rgba(0, 0, 0, .345);
+}
+
+.nimBorder {
     display: flex;
     position: absolute;
     width: 40px;
     height: 40px;
     border: 5px solid #c1282a;
-    top: 10%; left: 30%;
+    top: 10%;
+    left: 30%;
     border-radius: 50%;
-    transform: perspective(800px) scale3d(1, 1.2, .4)  translate(200px , 0px);
-    animation: nimBorders 10s linear  infinite ;
+    transform: perspective(800px) scale3d(1, 1.2, .4) translate(200px, 0px);
+    animation: nimBorders 10s linear infinite;
 
 }
+
 @keyframes nimBorders {
-    0%{
-        transform: perspective(800px) scale3d(1, 1.2, .4) translate(100px,100px) ;
+    0% {
+        transform: perspective(800px) scale3d(1, 1.2, .4) translate(100px, 100px);
     }
-    25%{
-        transform: perspective(800px) scale3d(1.5, .9, 1.2) translate(0px , 0px);
+
+    25% {
+        transform: perspective(800px) scale3d(1.5, .9, 1.2) translate(0px, 0px);
     }
-    50%{
-        transform: perspective(800px) scale3d(1, 1.2, .2) translate(-100px , 0px);
+
+    50% {
+        transform: perspective(800px) scale3d(1, 1.2, .2) translate(-100px, 0px);
     }
-    75%{
-        transform: perspective(800px) scale3d(1.7, .9, .4) translate(0px , 0px);
+
+    75% {
+        transform: perspective(800px) scale3d(1.7, .9, .4) translate(0px, 0px);
     }
-    100%{
-        transform: perspective(800px) scale3d(1, 1.2, .4) translate(100px , 100px);
+
+    100% {
+        transform: perspective(800px) scale3d(1, 1.2, .4) translate(100px, 100px);
     }
+
+}
+
+.w-30 {
+    width: 30%;
+}
+
+.ahrefs {
+    color: #c1282a;
+    text-decoration: underline;
+}
+
+.parags {
+    font-size: 13px;
+    padding: 1rem 0rem;
+    font-family: poppinsRegular;
+}
+
+.topstars {
+
+    top: -50px;
+}
+
+.z-454 {
+    z-index: 999;
+}
+
+.redback {
+    position: absolute;
+    width: 100%;
+    height: 5px;
+    display: flex;
+    left: 0;
+    top: 0;
+    background-color: #c1282a;
+}
+
+.divredback::after {
+    width: 100%;
+    height: 3px;
+    background-image: linear-gradient(to right, );
+
+
+}
+
+.spansop {
+    font-family: poppinsRegular;
+}
+
+.stopsa {
+    top: -70px;
+    line-height: 1.87rem;
+}
+
+.spansop>span {
+    line-height: 1.87rem;
+}
+
+.spansop>p {
+    line-height: 1.9rem;
+}
+
+.divredback {
+    background-color: white;
+}
+
+.iconsli>i {
+    color: #c1282a;
+    transition: .4s ease-in-out;
+}
+
+.iconsli:hover>i {
+    color: black;
+}
+
+.spansicons {
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border: 1px solid white;
+    padding: 1rem;
+}
+
+.spansicons>i {
+    color: #c1282a;
+    font-size: 2.5rem;
+    position: relative;
+    z-index: 80;
+
+
+
+}
+
+.spansicons::after {
+    content: '';
+    top: 0;
+
+    left: 0;
+    scale: .5;
+    position: absolute;
+    display: flex;
+    background-color: white;
+    width: 100%;
+    height: 100%;
+    animation: shadowboxing 4s ease-in-out infinite;
+}
+.spanw1{
+    width: 60px;
+    height: 2px;
+    background-color: #c1282a;
+    display: flex;
+}
+.spanw2{
+    width: 30px;
+    height: 2px;
+    background-color: black;
+    display: flex;
+
+}
+.spanw3{
+    width: 5px;
+    height: 2px;
+    background-color: black;
+
+}
+.ultype{
+    align-items: center;
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+}
+.Learnhref{
+    padding: .8rem 1.6rem;
+    border-radius: 7px;
+    background-color: #c1282a;
+    color: white;
+    transition: .4s ease-in-out;
+}
+.Learnhref:hover{
+    background-color: white;
+    color: #c1282a;
+   
+    box-shadow: 2px 10px 50px rgba(0, 0, 0, 0.494);
+}
+.h4p>p{
+    font-family: poppinsRegular;
     
+}
+.h4p>h4{
+    font-size: 1.2rem;
+}
+
+@keyframes shadowboxing {
+    from {
+        background-color: white;
+        scale: .5;
+
+    }
+
+    to {
+        background-color: transparent;
+        scale: 1.5;
+    }
+}
+
+.spansicons>i::before {
+    // position: absolute;
+    background-color: white;
+    width: 80px;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
