--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -90,12 +90,32 @@ body {
 
 .ulnav2 {
     list-style-type: none;
+    font-family: poppinsRegular;
+    font-size: 12px;
 }
-
+.compol{
+    font-size: 13px;
+    transition: .4s ease-in-out;
+    background-color: white;
+}
+.compol:hover{
+    background-color: black;
+    color: white;
+}
 .ulnav2>li {
     margin: 0 1rem;
 }
-
+.logoheader{
+    font-size: 2rem;
+}
+.spanmesh{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 3px;
+    background-color: black;
+}
 .sizeicons {
     font-size: .7rem;
     display: flex;
@@ -491,7 +511,23 @@ body {
 .h4p>h4{
     font-size: 1.2rem;
 }
-
+.stardrd{
+    font-family:poppinsRegular ;
+}
+.stardrd>p{
+    line-height: 2rem;
+}
+.divh5h4{
+    margin-left:1rem ;
+    >h5{
+        color: #24355A;
+        font-size: 2.7rem;
+    }
+    >p{
+        font-family: poppinsRegular;
+        line-height: 2.1rem;
+    }
+}
 @keyframes shadowboxing {
     from {
         background-color: white;
@@ -504,6 +540,41 @@ body {
         scale: 1.5;
     }
 }
+.divimg12{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    background-color: #c1282a;
+    border: 5px solid white;
+    left: 40%;
+    top: 45%;
+    width: 300px;
+    
+}
+.imgwidheight{
+    width: 70%;
+    height: 60%;
+
+}
+.stariconsw{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.stariconsw::before{  
+    border-radius: 5px;
+    font-size: 1.5rem;
+    color: #c1282a;
+    background-color: white;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    
+
+}
 
 .spansicons>i::before {
     // position: absolute;
@@ -514,4 +585,16 @@ body {
     justify-content: center;
     align-items: center;
 
+}
+.starterp{
+    color: white;
+
+}
+.starterp>p{
+    white-space: nowrap;
+}
+.phoneNum>p{
+    font-size: 35px;
+    color: white;
+   
 }
