--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,6 +96,7 @@ body {
 
 .ulnav2 > li {
   margin: 0 1rem;
+  padding: 1.7rem 0rem;
 }
 
 .menuClose {
@@ -617,6 +618,70 @@ body {
   text-transform: capitalize;
 }
 
+.ulnav02 {
+  width: 250%;
+}
+
+.linavbars {
+  padding: 0rem 0rem;
+}
+
+.linavbars > p {
+  width: -moz-fit-content;
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+  transition: 0.4s ease-in-out;
+  padding: 0.6rem 0rem;
+}
+.linavbars > p:hover {
+  color: #c1282a;
+}
+.linavbars > p:nth-of-type(1) {
+  font-family: poppinsBold;
+}
+
+.ulnavbars {
+  list-style-type: none;
+}
+
+.divinputbars {
+  background-color: white;
+  padding: 0.5rem 0.7rem;
+}
+
+.inputsearch {
+  background-color: transparent;
+  color: black;
+  border: none;
+  height: 100%;
+  padding: 0rem 0.5rem;
+  font-family: poppinsRegular;
+  outline: none;
+}
+
+.bordernavsearch {
+  border: 2px solid #c1282a;
+  background-color: #F6F6F6;
+  border-radius: 5px;
+}
+
+.righticonsbar {
+  cursor: pointer;
+  height: 100%;
+  font-size: 2rem;
+  background-color: #c1282a;
+  display: flex;
+  align-items: center;
+  color: white;
+  padding: 0.4rem 0.2rem;
+}
+
+.ulabsbars {
+  height: 70%;
+}
+
 .span0bar {
   display: flex;
   width: 3px;
@@ -625,6 +690,10 @@ body {
   transform: scaleY(0);
   transition: 0.4s ease-in-out;
   z-index: 90;
+}
+
+.zirmenuul {
+  left: -30%;
 }
 
 .linearstar:hover .span0bar {
