--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -270,7 +270,7 @@ body {
     right: 7%;
     top: 10%;
     border-radius: 60% 40% 30% 40%;
-    animation: radius2 15s linear infinite;
+    animation: radius3 15s linear infinite;
     z-index: 0;
     transform: translate(0px, 0px);
 }
@@ -278,10 +278,59 @@ body {
     .nimradius{
         width: 300px;
     height: 300px;
+    animation: radius2 15s linear infinite;
     }
     
 }
+@keyframes radius3 {
+    0% {
+        border-radius: 60% 40% 30% 40%;
+        transform: translate(-30px, 0px);
+    }
 
+    15% {
+        border-radius: 50% 70% 65% 70%;
+        transform: translate(0px, 0px);
+    }
+
+    30% {
+        border-radius: 70% 40% 45% 50%;
+        transform: translate(20px, 0px);
+    }
+
+    45% {
+        border-radius: 50% 70% 100% 85%;
+        transform: translate(0px, 0px);
+    }
+
+    55% {
+        border-radius: 80% 45% 50% 65%;
+        transform: translate(-30px, 0px);
+
+    }
+
+    65% {
+        border-radius: 40% 85% 80% 70%;
+        transform: translate(-50px, 0px);
+    }
+
+    75% {
+        border-radius: 80% 60% 60% 45%;
+        transform: translate(-70px, 0px);
+    }
+
+    90% {
+        border-radius: 35% 100% 90% 80%;
+        transform: translate(-50px, 0px);
+
+    }
+
+    100% {
+        border-radius: 60% 40% 30% 40%;
+        transform: translate(-30px, 0px);
+    }
+    
+}
 @keyframes radius2 {
     0% {
         border-radius: 60% 40% 30% 40%;
