--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ body {
 
 .ulnav2 {
   list-style-type: none;
-  font-family: poppinsRegular;
+  font-family: poppinsBold;
   font-size: 12px;
 }
 
@@ -113,11 +113,12 @@ body {
   top: 0;
   transition: 0.4s ease-in-out;
   position: fixed;
-  width: 60%;
+  width: 75%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: start;
+  font-family: poppinsRegular;
 }
 .ulnav2mob > li {
   font-size: 16px;
@@ -352,6 +353,44 @@ body {
     transform: translate(0px, 0px);
   }
 }
+.listul {
+  -webkit-backdrop-filter: blur(500px);
+          backdrop-filter: blur(500px);
+  left: -40%;
+  top: 100%;
+  min-width: 220%;
+  list-style-type: none;
+  color: black;
+  opacity: 0;
+  visibility: hidden;
+  transform: scaleY(0);
+  transform-origin: top;
+  background-color: rgba(255, 255, 255, 0.903);
+  transition: 0.4s ease-in-out;
+  z-index: 50;
+}
+
+.listul > li {
+  width: -moz-fit-content;
+  width: fit-content;
+  transition: 0.4s ease-in-out;
+  padding: 0.7rem 0rem;
+}
+
+.listul > li:hover > a {
+  color: #c1282a !important;
+}
+
+.listul > li > a {
+  transition: 0.4s ease-in-out;
+}
+
+.starli:hover > ul {
+  opacity: 1;
+  visibility: visible;
+  transform: scaleY(1);
+}
+
 .preserve3d {
   transform-style: preserve-3d;
 }
